--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "opcodesio/log-viewer": "^3.1",
         "spatie/laravel-backup": "*"
     },
     "require-dev": {
